--- a/11-worldwise/starter/package.json
+++ b/11-worldwise/starter/package.json
@@ -14,9 +14,11 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "json-server": "^0.17.4",
+    "leaflet": "^1.9.4",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
